pycoreloop/core_loop.py


# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 280
for _lib in _libs.values():
    if not _lib.has("RFS_start", "cdecl"):
        continue
    RFS_start = _lib.get("RFS_start", "cdecl")
    RFS_start.argtypes = [POINTER(struct_core_state)]
    RFS_start.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 281
for _lib in _libs.values():
    if not _lib.has("restart_spectrometer", "cdecl"):
        continue
    restart_spectrometer = _lib.get("restart_spectrometer", "cdecl")
    restart_spectrometer.argtypes = [POINTER(struct_core_state)]
    restart_spectrometer.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 284
for _lib in _libs.values():
    if not _lib.has("get_Navg1", "cdecl"):
        continue
    get_Navg1 = _lib.get("get_Navg1", "cdecl")
    get_Navg1.argtypes = [POINTER(struct_core_state)]
    get_Navg1.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 285
for _lib in _libs.values():
    if not _lib.has("get_Navg2", "cdecl"):
        continue
    get_Navg2 = _lib.get("get_Navg2", "cdecl")
    get_Navg2.argtypes = [POINTER(struct_core_state)]
    get_Navg2.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 286
for _lib in _libs.values():
    if not _lib.has("get_Nfreq", "cdecl"):
        continue
    get_Nfreq = _lib.get("get_Nfreq", "cdecl")
    get_Nfreq.argtypes = [POINTER(struct_core_state)]
    get_Nfreq.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 287
for _lib in _libs.values():
    if not _lib.has("get_tr_avg", "cdecl"):
        continue
    get_tr_avg = _lib.get("get_tr_avg", "cdecl")
    get_tr_avg.argtypes = [POINTER(struct_core_state)]
    get_tr_avg.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 288
for _lib in _libs.values():
    if not _lib.has("get_gain_auto_max", "cdecl"):
        continue
    get_gain_auto_max = _lib.get("get_gain_auto_max", "cdecl")
    get_gain_auto_max.argtypes = [POINTER(struct_core_state), c_int]
    get_gain_auto_max.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 289
for _lib in _libs.values():
    if not _lib.has("get_tr_length", "cdecl"):
        continue
    get_tr_length = _lib.get("get_tr_length", "cdecl")
    get_tr_length.argtypes = [POINTER(struct_core_state)]
    get_tr_length.restype = c_uint32
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 293
for _lib in _libs.values():
    if not _lib.has("set_route", "cdecl"):
        continue
    set_route = _lib.get("set_route", "cdecl")
    set_route.argtypes = [POINTER(struct_core_state), c_uint8, c_uint8]
    set_route.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 296
for _lib in _libs.values():
    if not _lib.has("update_spec_gains", "cdecl"):
        continue
    update_spec_gains = _lib.get("update_spec_gains", "cdecl")
    update_spec_gains.argtypes = [POINTER(struct_core_state)]
    update_spec_gains.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 299
for _lib in _libs.values():
    if not _lib.has("trigger_ADC_stat", "cdecl"):
        continue
    trigger_ADC_stat = _lib.get("trigger_ADC_stat", "cdecl")
    trigger_ADC_stat.argtypes = []
    trigger_ADC_stat.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 302
for _lib in _libs.values():
    if not _lib.has("reset_errormasks", "cdecl"):
        continue
    reset_errormasks = _lib.get("reset_errormasks", "cdecl")
    reset_errormasks.argtypes = [POINTER(struct_core_state)]
    reset_errormasks.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 305
for _lib in _libs.values():
    if not _lib.has("update_time", "cdecl"):
        continue
    update_time = _lib.get("update_time", "cdecl")
    update_time.argtypes = [POINTER(struct_core_state)]
    update_time.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 308
for _lib in _libs.values():
    if not _lib.has("process_spectrometer", "cdecl"):
        continue
    process_spectrometer = _lib.get("process_spectrometer", "cdecl")
    process_spectrometer.argtypes = [POINTER(struct_core_state)]
    process_spectrometer.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 311
for _lib in _libs.values():
    if not _lib.has("transfer_to_cdi", "cdecl"):
        continue
    transfer_to_cdi = _lib.get("transfer_to_cdi", "cdecl")
    transfer_to_cdi.argtypes = [POINTER(struct_core_state)]
    transfer_to_cdi.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 313
for _lib in _libs.values():
    if not _lib.has("process_delayed_cdi_dispatch", "cdecl"):
        continue
    process_delayed_cdi_dispatch = _lib.get("process_delayed_cdi_dispatch", "cdecl")
    process_delayed_cdi_dispatch.argtypes = [POINTER(struct_core_state)]
    process_delayed_cdi_dispatch.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 316
for _lib in _libs.values():
    if not _lib.has("process_gain_range", "cdecl"):
        continue
    process_gain_range = _lib.get("process_gain_range", "cdecl")
    process_gain_range.argtypes = [POINTER(struct_core_state)]
    process_gain_range.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 317
for _lib in _libs.values():
    if not _lib.has("bitslice_control", "cdecl"):
        continue
    bitslice_control = _lib.get("bitslice_control", "cdecl")
    bitslice_control.argtypes = [POINTER(struct_core_state)]
    bitslice_control.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 320
for _lib in _libs.values():
    if not _lib.has("set_spectrometer", "cdecl"):
        continue
    set_spectrometer = _lib.get("set_spectrometer", "cdecl")
    set_spectrometer.argtypes = [POINTER(struct_core_state)]
    set_spectrometer.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 321
for _lib in _libs.values():
    if not _lib.has("default_state", "cdecl"):
        continue
    default_state = _lib.get("default_state", "cdecl")
    default_state.argtypes = [POINTER(struct_core_state_base)]
    default_state.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 324
for _lib in _libs.values():
    if not _lib.has("debug_helper", "cdecl"):
        continue
    debug_helper = _lib.get("debug_helper", "cdecl")
    debug_helper.argtypes = [c_uint8, POINTER(struct_core_state)]
    debug_helper.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 325
for _lib in _libs.values():
    if not _lib.has("cdi_not_implemented", "cdecl"):
        continue
    cdi_not_implemented = _lib.get("cdi_not_implemented", "cdecl")
    cdi_not_implemented.argtypes = [String]
    cdi_not_implemented.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 329
for _lib in _libs.values():
    if not _lib.has("send_hello_packet", "cdecl"):
        continue
    send_hello_packet = _lib.get("send_hello_packet", "cdecl")
    send_hello_packet.argtypes = [POINTER(struct_core_state)]
    send_hello_packet.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 330
for _lib in _libs.values():
    if not _lib.has("process_hearbeat", "cdecl"):
        continue
    process_hearbeat = _lib.get("process_hearbeat", "cdecl")
    process_hearbeat.argtypes = [POINTER(struct_core_state)]
    process_hearbeat.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 331
for _lib in _libs.values():
    if not _lib.has("process_housekeeping", "cdecl"):
        continue
    process_housekeeping = _lib.get("process_housekeeping", "cdecl")
    process_housekeeping.argtypes = [POINTER(struct_core_state)]
    process_housekeeping.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 334
for _lib in _libs.values():
    if not _lib.has("process_eos", "cdecl"):
        continue
    process_eos = _lib.get("process_eos", "cdecl")
    process_eos.argtypes = [POINTER(struct_core_state)]
    process_eos.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 337
for _lib in _libs.values():
    if not _lib.has("cdi_dispatch_uC", "cdecl"):
        continue
    cdi_dispatch_uC = _lib.get("cdi_dispatch_uC", "cdecl")
    cdi_dispatch_uC.argtypes = [POINTER(struct_cdi_stats), c_uint16, c_uint32]
    cdi_dispatch_uC.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 340
for _lib in _libs.values():
    if not _lib.has("delayed_cdi_dispatch_done", "cdecl"):
        continue
    delayed_cdi_dispatch_done = _lib.get("delayed_cdi_dispatch_done", "cdecl")
    delayed_cdi_dispatch_done.argtypes = [POINTER(struct_core_state)]
    delayed_cdi_dispatch_done.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 343
for _lib in _libs.values():
    if not _lib.has("calibrator_default_state", "cdecl"):
        continue
    calibrator_default_state = _lib.get("calibrator_default_state", "cdecl")
    calibrator_default_state.argtypes = [POINTER(struct_calibrator_state)]
    calibrator_default_state.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 344
for _lib in _libs.values():
    if not _lib.has("calib_set_mode", "cdecl"):
        continue
    calib_set_mode = _lib.get("calib_set_mode", "cdecl")
    calib_set_mode.argtypes = [POINTER(struct_core_state), c_uint8]
    calib_set_mode.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 345
for _lib in _libs.values():
    if not _lib.has("process_calibrator", "cdecl"):
        continue
    process_calibrator = _lib.get("process_calibrator", "cdecl")
    process_calibrator.argtypes = [POINTER(struct_core_state)]
    process_calibrator.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 346
for _lib in _libs.values():
    if not _lib.has("dispatch_calibrator_data", "cdecl"):
        continue
    dispatch_calibrator_data = _lib.get("dispatch_calibrator_data", "cdecl")
    dispatch_calibrator_data.argtypes = [POINTER(struct_core_state)]
    dispatch_calibrator_data.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 356
for _lib in _libs.values():
    if not _lib.has("mini_wait", "cdecl"):
        continue
    mini_wait = _lib.get("mini_wait", "cdecl")
    mini_wait.argtypes = [c_uint32]
    mini_wait.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 360
for _lib in _libs.values():
    if not _lib.has("timer_start", "cdecl"):
        continue
    timer_start = _lib.get("timer_start", "cdecl")
    timer_start.argtypes = []
    timer_start.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 363
for _lib in _libs.values():
    if not _lib.has("timer_stop", "cdecl"):
        continue
    timer_stop = _lib.get("timer_stop", "cdecl")
    timer_stop.argtypes = []
    timer_stop.restype = c_uint32
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 367
for _lib in _libs.values():
    if not _lib.has("encode_12plus4", "cdecl"):
        continue
    encode_12plus4 = _lib.get("encode_12plus4", "cdecl")
    encode_12plus4.argtypes = [c_int32]
    encode_12plus4.restype = c_uint16
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 368
for _lib in _libs.values():
    if not _lib.has("decode_12plus4", "cdecl"):
        continue
    decode_12plus4 = _lib.get("decode_12plus4", "cdecl")
    decode_12plus4.argtypes = [c_uint16]
    decode_12plus4.restype = c_int32
    break
